se agregaron nuevas operaciones

--- a/variables.html
+++ b/variables.html
@@ -10,8 +10,13 @@
     let numero1 = 12;
     let numero2 = 8;
     let suma = numero1 + numero2;
-
-    document.write("El resultado de la suma es:",suma);    
+    let resta = numero1 - numero2;
+    let producto = numero1 * numero2;
+    let división = numero1 / numero2;
+    document.write("<br> El resultado de la suma es:",suma);
+    document.write("<br> El resultado de la resta es:",resta)
+    document.write("<br> El resultado de la multiplicción es:",producto)
+    document.write("<br> El resultado de la división es:",división)
     </script>
 </body>
 </html>
